# strava-x

./: .editorconfig  .env.local.example  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  global.d.ts  jest.config.js  main.py  next-sitemap.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig-paths-bootstrap.js  tsconfig.json
.claude/: settings.local.json
client/: components.json  next-sitemap.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/public/: browserconfig.xml  manifest.json  site.webmanifest
client/src/lib/: config.ts  utils.ts
client/src/models/: session.ts  user.ts
client/src/pages/: _app.tsx  _document.tsx
client/src/store/: store.tsx
db/: 001_published_maps.sql
public/: robots.txt  sitemap-0.xml  sitemap.xml
server/: .editorconfig  Makefile  docker-entrypoint.sh  main.py  pyproject.toml  setup.cfg
src/app/: actions.ts  layout.tsx  page.tsx
src/hooks/: use-activity-clusters.ts  use-initial-map-position.ts  use-media-query.ts  use-mounted.ts  use-persisted-activities.ts  use-persisted-map-position.ts  use-publish.ts  use-statistics.ts  use-strava-auth.ts  use-units.ts  use-welcome-panel.ts
src/lib/: activities-db.ts  activities-serialize.ts  busiest-area.ts  clusters.ts  config.ts  db.ts  geo-utils.ts  gps.ts  gpx.ts  rate-limit.ts  server-config.ts  slug.ts  strava-verify.ts  strava.ts  utils.ts
src/models/: activity.ts  location.ts
src/styles/: global.scss
(+84 files in other folders)
